syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "github.com/carlosalg/todo-grpc-go";

message Todo {
  int32 id = 1;
  string title = 2;
  bool completed = 3;
}
message DeleteTodoRequest {
  int32 id = 1;
}
message DeleteTodoResponse {
  bool success = 1;
}

service TodoService {
  rpc CreateTodo (Todo) returns (Todo);
  rpc GetTodoList (google.protobuf.Empty) returns (stream Todo);
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
}
